sys-kernel/genkernel: Bump v.4.0.3+2

--- a/packages/atoms/tools/sys-kernel/genkernel/build.yaml
+++ b/packages/atoms/tools/sys-kernel/genkernel/build.yaml
@@ -5,9 +5,9 @@ prelude:
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
   chown portage:portage -R /var/cache/portage/ && \
   {{- if .Values.use_flags }}
-  USE="{{ join " " .Values.use_flags }}" emerge {{ ( index .Values.labels "emerge.packages" ) }} -pv -t && \
+  USE="{{ join " " .Values.use_flags }}" emerge {{ ( index .Values.labels "emerge.packages" ) }} -pv --nodeps && \
   {{- else }}
-  emerge -j ${JOBS} {{ ( index .Values.labels "emerge.packages" ) }} -pv -t && \
+  emerge -j ${JOBS} {{ ( index .Values.labels "emerge.packages" ) }} -pv --nodeps && \
   {{- end }}
   {{- if .Values.use_flags }}
   USE="{{ join " " .Values.use_flags }}" emerge -j ${JOBS} --nodeps {{ ( index .Values.labels "emerge.packages" ) }}
