--- a/packages/atoms/x11-misc/x11-misc/grsync/definition.yaml
+++ b/packages/atoms/x11-misc/x11-misc/grsync/definition.yaml
@@ -1,5 +1,5 @@
 name: grsync
-version: 1.2.6
+version: 1.3.1
 category: x11-misc
 requires:
 - name: rsync
@@ -7,7 +7,7 @@ requires:
   category: net-misc
 - name: gtk+
   version: '>=0'
-  category: x11-libs-2
+  category: x11-libs-3
 annotations:
   subsets:
     rules:
@@ -20,10 +20,10 @@ uri:
 - http://www.opbyte.it/grsync/
 license: GPL-2
 labels:
-  DEPEND: '>=x11-libs/gtk+-2.16:2 net-misc/rsync virtual/pkgconfig dev-util/intltool'
-  RDEPEND: '>=x11-libs/gtk+-2.16:2 net-misc/rsync'
+  DEPEND: '>=x11-libs/gtk+:3 net-misc/rsync virtual/pkgconfig dev-util/intltool'
+  RDEPEND: '>=x11-libs/gtk+:3 net-misc/rsync'
   emerge.packages: x11-misc/grsync
   kit: desktop-kit
   original.package.name: x11-misc/grsync
   original.package.slot: "0"
-  original.package.version: 1.2.6
+  original.package.version: 1.3.1
