--- a/packages/atoms/gnome-extra/app-misc/gnote/build.yaml
+++ b/packages/atoms/gnome-extra/app-misc/gnote/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race16
+- name: gtkmm
   version: '>=0'
-  category: seed
+  category: dev-cpp-3.0
