--- a/packages/atoms/gnome-extra/gnome-extra/gnome-calculator/build.yaml
+++ b/packages/atoms/gnome-extra/gnome-extra/gnome-calculator/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# Temporary until next race
+- >-
+  sed -i -e 's|^VALA_MAX_API_VERSION.*|VALA_MAX_API_VERSION=0.54|g'
+  /var/git/meta-repo/kits/gnome-kit/gnome-extra/gnome-calculator/gnome-calculator-3.36.0.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
