dev-cpp-3.0/gtkmm: Bump v.3.24.2+1

--- a/packages/atoms/gnome-extra/dev-cpp-3.0/gtkmm/definition.yaml
+++ b/packages/atoms/gnome-extra/dev-cpp-3.0/gtkmm/definition.yaml
@@ -1,10 +1,12 @@
 name: gtkmm
-version: 3.24.2
+version: 3.24.2+1
 category: dev-cpp-3.0
 use_flags:
 - -doc
 - -test
 - prefix
+- wayland
+- X
 requires:
 - name: atkmm
   version: '>=0'
