--- a/packages/atoms/gnome-extra/app-misc/gnote/build.yaml
+++ b/packages/atoms/gnome-extra/app-misc/gnote/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  cp gnote-3.36.2.ebuild
+  /var/git/meta-repo/kits/gnome-kit/app-misc/gnote/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
