atoms/gnome-extra: Fix build deps

--- a/packages/atoms/gnome-extra/app-text-3/gtkspell/build.yaml
+++ b/packages/atoms/gnome-extra/app-text-3/gtkspell/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: geany
+- name: discount
   version: '>=0'
-  category: app-editors
+  category: app-text
