gnome-extra/sushi: Bump v.3.34.0+1

--- a/packages/atoms/gnome-extra/gnome-extra/sushi/definition.yaml
+++ b/packages/atoms/gnome-extra/gnome-extra/sushi/definition.yaml
@@ -1,8 +1,9 @@
 name: sushi
-version: 3.34.0
+version: 3.34.0+1
 category: gnome-extra
 use_flags:
 - office
+- wayland
 requires:
 - name: unoconv
   version: '>=0'
