--- a/packages/atoms/gnome-extra/gnome-extra/gnome-clocks/build.yaml
+++ b/packages/atoms/gnome-extra/gnome-extra/gnome-clocks/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  mkdir -p /etc/portage/patches/gnome-extra/gnome-clocks/ &&
+  mv gnome-clocks-vala-0.54.patch /etc/portage/patches/gnome-extra/gnome-clocks/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
