games-puzzle/swell-foop: Bump v.3.34.1+1

--- a/packages/atoms/gnome-games/games-puzzle/swell-foop/build.yaml
+++ b/packages/atoms/gnome-games/games-puzzle/swell-foop/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp swell-foop-3.34.1.ebuild /var/git/meta-repo/kits/gnome-kit/games-puzzle/swell-foop/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
