--- a/packages/atoms/gnome-games/games-board/iagno/build.yaml
+++ b/packages/atoms/gnome-games/games-board/iagno/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  mkdir -p /etc/portage/patches/games-board/iagno/ &&
+  mv iagno_*.patch /etc/portage/patches/games-board/iagno/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
