--- a/packages/atoms/gnome-games/games-puzzle/gnome-taquin/build.yaml
+++ b/packages/atoms/gnome-games/games-puzzle/gnome-taquin/build.yaml
@@ -1,7 +1,7 @@
 prelude:
 - >-
   mkdir -p /etc/portage/patches/games-puzzle/gnome-taquin &&
-  cp taqui_*.patch /etc/portage/patches/games-puzzle/gnome-taquin/
+  cp taquin_*.patch /etc/portage/patches/games-puzzle/gnome-taquin/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
