--- a/packages/atoms/gnome-games/games-board/sjeng/definition.yaml
+++ b/packages/atoms/gnome-games/games-board/sjeng/definition.yaml
@@ -1,5 +1,5 @@
 name: sjeng
-version: "11.2"
+version: 11.2+1
 category: games-board
 requires:
 - name: gdbm
@@ -23,4 +23,4 @@ labels:
   kit: games-kit
   original.package.name: games-board/sjeng
   original.package.slot: "0"
-  original.package.version: 11.2-r2
+  original.package.version: 11.2-r3
