net-libs/zeromq: Bump v.4.3.4+1

--- a/packages/atoms/python-extra/net-libs/zeromq/build.yaml
+++ b/packages/atoms/python-extra/net-libs/zeromq/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: openpgm
+- name: macaroni-funtoo-race16
   version: '>=0'
-  category: net-libs
+  category: seed
