--- a/packages/atoms/python-extra/net-libs/zeromq/definition.yaml
+++ b/packages/atoms/python-extra/net-libs/zeromq/definition.yaml
@@ -1,19 +1,16 @@
 name: zeromq
-version: 4.3.4
+version: 4.3.4+1
 category: net-libs
 use_flags:
 - -doc
 - -elibc_Darwin
-- pgm
+- -pgm
 - sodium
 - unwind
 requires:
 - name: libsodium
   version: '>=0'
   category: dev-libs
-- name: openpgm
-  version: '>=0'
-  category: net-libs
 annotations:
   subsets:
     rules:
