--- a/packages/atoms/python-extra/dev-python/pycurl/build.yaml
+++ b/packages/atoms/python-extra/dev-python/pycurl/build.yaml
@@ -1,5 +1,6 @@
 prelude:
 - |-
+  export CURL_SSL="openssl" && \
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
