dev-python/netaddr: Bump v.0.7.19+1

--- a/packages/atoms/python-extra/dev-python/netaddr/definition.yaml
+++ b/packages/atoms/python-extra/dev-python/netaddr/definition.yaml
@@ -1,13 +1,13 @@
 name: netaddr
-version: 0.7.19
+version: 0.7.19+1
 category: dev-python
 use_flags:
+- -cli
 - -python_targets_python2_7
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
 - -test
-- cli
 - python_targets_python3_9
 requires:
 - name: python
