atoms/python-extra: Review build order

--- a/packages/atoms/python-extra/dev-python/cairocffi/build.yaml
+++ b/packages/atoms/python-extra/dev-python/cairocffi/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: texi2dvi
+- name: cppy
   version: '>=0'
-  category: virtual
+  category: dev-python
