--- a/packages/atoms/python-extra/www-servers/tornado/build.yaml
+++ b/packages/atoms/python-extra/www-servers/tornado/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: dvipng
+- name: kiwisolver
   version: '>=0'
-  category: app-text
+  category: dev-python
