--- a/packages/atoms/python-extra/dev-python/cppy/build.yaml
+++ b/packages/atoms/python-extra/dev-python/cppy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race16
+- name: texi2dvi
   version: '>=0'
-  category: seed
+  category: virtual
