--- a/packages/atoms/python-extra/dev-python/kiwisolver/build.yaml
+++ b/packages/atoms/python-extra/dev-python/kiwisolver/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: cycler
+- name: dvipng
   version: '>=0'
-  category: dev-python
+  category: app-text
