atoms/python-extra: Review build order

--- a/packages/atoms/python-extra/x11-libs-3.0-gtk3/wxGTK/build.yaml
+++ b/packages/atoms/python-extra/x11-libs-3.0-gtk3/wxGTK/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: qhull
+- name: xlwt
   version: '>=0'
-  category: media-libs
+  category: dev-python
