--- a/packages/atoms/python-extra/media-libs/qhull/build.yaml
+++ b/packages/atoms/python-extra/media-libs/qhull/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: xlwt
+- name: eselect-wxwidgets
   version: '>=0'
-  category: dev-python
+  category: app-eselect
