virtual/grub: Bump v.4

--- a/packages/virtual/grub/definition.yaml
+++ b/packages/virtual/grub/definition.yaml
@@ -1,11 +1,11 @@
-category: "virtual"
-name: "grub"
-version: "3"
-description: "Virtual package for setup Macaroni OS Boot stuff"
+name: grub
+version: "4"
+category: virtual
 requires:
 - name: grub
-  category: "sys-boot-2"
-  version: ">=0"
+  version: '>=0'
+  category: sys-boot-2
 - name: base
+  version: '>=0'
   category: virtual
-  version: ">=0"
+description: Virtual package for setup Macaroni OS Boot stuff
