--- a/packages/virtual/grub/99-macaroni.conf
+++ b/packages/virtual/grub/99-macaroni.conf
@@ -5,5 +5,6 @@ dracutmodules="rescue resume bash kernel-modules rootfs-block udev-rules usrmoun
 omit_dracutmodules="fcoe"
 
 # Needed for handle correctly encrypted partition with luks
+# With dracut-059 we need spaces before and later to avoid errors.
 add_drivers+=" dm-crypt "
 
