--- a/packages/atoms/python-extra/dev-python/pillow/build.yaml
+++ b/packages/atoms/python-extra/dev-python/pillow/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+- >-
+  mv pillow-10.0.1.ebuild  /var/git/meta-repo/kits/python-modules-kit/dev-python/pillow &&
+  ebuild pillow-10.0.1.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
