dev-python/pillow: Bump v.10.0.1+1

--- a/packages/atoms/python-extra/dev-python/pillow/build.yaml
+++ b/packages/atoms/python-extra/dev-python/pillow/build.yaml
@@ -1,6 +1,7 @@
 prelude:
 - >-
   mv pillow-10.0.1.ebuild  /var/git/meta-repo/kits/python-modules-kit/dev-python/pillow &&
+  cd  /var/git/meta-repo/kits/python-modules-kit/dev-python/pillow/ &&
   ebuild pillow-10.0.1.ebuild digest &&
   cd -
 - |-
