dev-python/pillow: Bump v.10.0.1+2

--- a/packages/atoms/python-extra/dev-python/pillow/definition.yaml
+++ b/packages/atoms/python-extra/dev-python/pillow/definition.yaml
@@ -1,5 +1,5 @@
 name: pillow
-version: 10.0.1+1
+version: 10.0.1+2
 category: dev-python
 use_flags:
 - -doc
@@ -8,7 +8,7 @@ use_flags:
 - -python_targets_python3_7
 - -python_targets_python3_8
 - -test
-- imagequant
+- -imagequant
 - jpeg
 - jpeg2k
 - lcms
