dev-python/matplotlib: Bump v.3.6.3+1

--- a/packages/atoms/python-extra/dev-python/matplotlib/build.yaml
+++ b/packages/atoms/python-extra/dev-python/matplotlib/build.yaml
@@ -1,6 +1,7 @@
 prelude:
 - >-
-  mv matplotlib-3.6.3.ebuild /var/git/meta-repo/kits/python-modules-kit/dev-python/matplotlib &&
+  mv matplotlib-3.6.3.ebuild /var/git/meta-repo/kits/python-modules-kit/dev-python/matplotlib/ &&
+  cd /var/git/meta-repo/kits/python-modules-kit/dev-python/matplotlib/ &&
   ebuild matplotlib-3.6.3.ebuild digest &&
   eselect lapack set 1 &&
   eselect blas set 1 &&
