portage-converter/qt.yaml: Update specs

--- a/portage-converter/qt.yaml
+++ b/portage-converter/qt.yaml
@@ -242,6 +242,7 @@ artefacts:
           name: qtcore
         - category: net-misc
           name: connman
+  # sctp use flags seems needed for qtvirtualkeyboard
   uses:
     disabled:
     - examples
@@ -254,7 +255,6 @@ artefacts:
     - debug
     - gssapi
     - libproxy
-    - sctp
   packages:
     - dev-qt/qtnetwork:5
 
