toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -96,6 +96,9 @@ requires:
   - name: libao
     category: media-libs
     version: '>=0'
+  - name: alsa-utils
+    category: media-sound-0.9
+    version: '>=0'
   - name: rrdtool
     category: net-analyzer
     version: '>=0'
@@ -174,6 +177,12 @@ requires:
   - name: smartmontools
     category: sys-apps
     version: '>=0'
+  - name: usb_modeswitch
+    category: sys-apps
+    version: '>=0'
+  - name: usbredir
+    category: sys-apps
+    version: '>=0'
   - name: nss-mdns
     category: sys-auth
     version: '>=0'
@@ -186,7 +195,25 @@ requires:
   - name: multipath-tools
     category: sys-fs
     version: '>=0'
+  - name: genkernel
+    category: sys-kernel
+    version: '>=0'
+  - name: acpi
+    category: sys-power
+    version: '>=0'
+  - name: cpupower
+    category: sys-power
+    version: '>=0'
   - name: hibernate-script
+    category: sys-power
+    version: '>=0'
+  - name: iasl
+    category: sys-power
+    version: '>=0'
+  - name: pm-quirks
+    category: sys-power
+    version: '>=0'
+  - name: pm-utils
     category: sys-power
     version: '>=0'
   - name: htop
