dev-java-3.9/maven-bin: Bump v.3.9.4

--- a/packages/atoms/java/dev-java-3.9/maven-bin/build.yaml
+++ b/packages/atoms/java/dev-java-3.9/maven-bin/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Temporary fix until next race. The tarball is no more available
+- >-
+  cd /var/git/meta-repo/kits/java-kit/dev-java/maven-bin/ &&
+  mv maven-bin-3.9.1.ebuild maven-bin-3.9.4.ebuild &&
+  ebuild maven-bin-3.9.4.ebuild digest
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
