portage-converter/firmware.yaml: Add edk2-ovmf

--- a/portage-converter/firmware.yaml
+++ b/portage-converter/firmware.yaml
@@ -139,6 +139,7 @@ artefacts:
     - sys-firmware/zd1201-firmware
     - sys-firmware/zd1211-firmware
 
+    - sys-firmware/edk2-ovmf
 
 
 include_layers:
