toolchain/gnome-extra: Add rdeps

--- a/packages/toolchain/gnome-extra/definition.yaml
+++ b/packages/toolchain/gnome-extra/definition.yaml
@@ -27,10 +27,16 @@ requires:
   - name: hamster-time-tracker
     category: app-office
     version: '>=0'
+  - name: unoconv
+    category: app-office
+    version: '>=0'
   - name: gtkspell
     category: app-text-3
     version: '>=0'
   - name: discount
+    category: app-text
+    version: '>=0'
+  - name: libgepub
     category: app-text
     version: '>=0'
   - name: pangomm
@@ -63,6 +69,9 @@ requires:
   - name: dconf-editor
     category: gnome-base
     version: '>=0'
+  - name: libgnomecanvas
+    category: gnome-base
+    version: '>=0'
   - name: gucharmap
     category: gnome-extra-2.90
     version: '>=0'
@@ -72,7 +81,16 @@ requires:
   - name: gnome-calculator
     category: gnome-extra
     version: '>=0'
+  - name: gnome-calendar
+    category: gnome-extra
+    version: '>=0'
   - name: gnome-characters
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-clocks
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-documents
     category: gnome-extra
     version: '>=0'
   - name: gnome-getting-started-docs
@@ -81,10 +99,28 @@ requires:
   - name: gnome-power-manager
     category: gnome-extra
     version: '>=0'
+  - name: gnome-recipes
+    category: gnome-extra
+    version: '>=0'
   - name: gnome-search-tool
     category: gnome-extra
     version: '>=0'
+  - name: gnome-shell-extension-applications-overview-tooltip
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-shell-extensions-topicons
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-shell-extensions-topicons-plus
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-shell-frippery
+    category: gnome-extra
+    version: '>=0'
   - name: gnome-system-monitor
+    category: gnome-extra
+    version: '>=0'
+  - name: gnome-todo
     category: gnome-extra
     version: '>=0'
   - name: gnome-tweaks
@@ -93,10 +129,25 @@ requires:
   - name: gnome-user-share
     category: gnome-extra
     version: '>=0'
+  - name: mousetweaks
+    category: gnome-extra
+    version: '>=0'
   - name: nautilus-sendto
     category: gnome-extra
     version: '>=0'
+  - name: polkit-gnome
+    category: gnome-extra
+    version: '>=0'
+  - name: sushi
+    category: gnome-extra
+    version: '>=0'
+  - name: gtk-layer-shell
+    category: gui-libs
+    version: '>=0'
   - name: gnome-font-viewer
+    category: media-gfx
+    version: '>=0'
+  - name: gnome-photos
     category: media-gfx
     version: '>=0'
   - name: gnome-screenshot
@@ -111,6 +162,12 @@ requires:
   - name: gnome-sound-recorder
     category: media-sound
     version: '>=0'
+  - name: libzapojit
+    category: net-libs
+    version: '>=0'
+  - name: gnome-online-miners
+    category: net-misc
+    version: '>=0'
   - name: mod_dnssd
     category: www-apache
     version: '>=0'
@@ -118,5 +175,14 @@ requires:
     category: x11-libs-3.0
     version: '>=0'
   - name: gkrellm-themes
+    category: x11-themes
+    version: '>=0'
+  - name: gtk-engines-adwaita
+    category: x11-themes
+    version: '>=0'
+  - name: gtk-engines-murrine
+    category: x11-themes
+    version: '>=0'
+  - name: murrine-themes
     category: x11-themes
     version: '>=0'
