toolchain/base-qt2: Add dev-qt-5/linguist

--- a/packages/toolchain/base-qt2/definition.yaml
+++ b/packages/toolchain/base-qt2/definition.yaml
@@ -30,6 +30,9 @@ requires:
   - name: designer
     category: dev-qt-5
     version: '>=0'
+  - name: linguist
+    category: dev-qt-5
+    version: '>=0'
   - name: qtmultimedia
     category: dev-qt-5
     version: '>=0'
