seed/funtoo-kit-geaaru: Bump v.0.20230927+1

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: "0.20230927"
+version: "0.20230927+1"
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: 5377a01c6b5aa93ab416e5c310263c9eb54e97ba
+  repo_hash: 8a8f69861159e8f49cdaaa4ea1f7a88f25de717d
