seed/macaroni-funtoo-race16: Bump v.0.20230927

--- a/packages/seeds/macaroni-funtoo-race16/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race16/build.yaml
@@ -79,6 +79,7 @@ steps:
   toolchain/base-gnome4
   toolchain/base-kde
   toolchain/tools
+  toolchain/firmware
   &&
   luet cleanup &&
   /usr/bin/gcc-config 1 &&
