--- a/portage-converter/gnome-extra.yaml
+++ b/portage-converter/gnome-extra.yaml
@@ -1,6 +1,5 @@
 skipped_resolutions:
   packages:
-
     - name: elt-patches
       category: app-portage
 
@@ -16,9 +15,6 @@ skipped_resolutions:
     # Until conflicts detection is fixed.
     - name: radiusclient-ng
       category: net-dialup
-
-    - name: systemd-tmpfiles
-      category: sys-apps
 
     - name: argp-standalone
       category: sys-libs
@@ -60,9 +56,6 @@ skipped_resolutions:
     - name: cdrtools
       category: virtual
 
-    - name: virtualbox-modules
-      category: app-emulation
-
     # Force OR condition for app-text/xmlto
     # on use virtual/w3m
     - name: lynx
@@ -76,9 +69,13 @@ skipped_resolutions:
     - name: jack-audio-connection-kit
       category: media-sound
 
-include_files:
+    - name: eselect-lib-bin-symlink
+      category: app-eselect
 
-build_template_file: ../templates/build-pkg-uses-subsets.yaml.tmpl
+    - name: zfs-kmod
+      category: sys-fs
+
+build_template_file: ../templates/build-pkg-uses-subsets2.yaml.tmpl
 
 global_annotations:
   subsets:
@@ -88,87 +85,303 @@ global_annotations:
       portage:
         - "^/var/db/pkg/"
 
-include_layers:
-- layers/macaroni-funtoo-race6.yaml
-
 artefacts:
-- tree: packages/atoms-extra/gnome
+
+- tree: packages/atoms/gnome-extra
   uses:
-    enabled:
-      - introspection
-      - vala
+    disabled:
+      - libressl
+      - static-libs
+      - debug
+      - test
+      - zeitgeist
+      - packagekit
+      - doc
   packages:
-    - app-text/gtkspell
+    - gnome-extra/gnome-getting-started-docs
+    - dev-cpp/atkmm
+    - dev-cpp/pangomm
+    - app-text/gtkspell:3
+    - app-misc/bijiben
+    - app-dicts/gnome-dictionary
+    - app-arch/file-roller
+    - dev-libs/libgnome-games-support:1
+    - dev-libs/gdl:3
+    - dev-util/meld
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - lcms
+      - debug
+      - lensfun
+      - test
+      - umfpack
+  packages:
+    - media-libs/babl
+    - dev-libs/libmanette
+    - dev-libs/libgnome-games-support:1
+    - gnome-extra/gconf-editor
+    - gnome-extra/gnome-search-tool
+    - gnome-extra/gucharmap
+    - media-libs/gegl:0.4
+    - x11-libs/gtksourceview:3.0
+    - gnome-base/dconf-editor
+    - gnome-extra/gnome-calculator
+    - gnome-extra/gnome-characters
+    - gnome-extra/gnome-power-manager
+    - gnome-extra/gnome-system-monitor
+    - gnome-extra/nautilus-sendto
+    - media-gfx/gnome-font-viewer
+    - media-gfx/gnome-screenshot
+    - media-sound/gnome-sound-recorder
+    - gnome-extra/gnome-user-share
+    - gnome-extra/gnome-tweaks
+
+- tree: packages/atoms/gnome-extra
+  mutations:
+    uses:
+      - wayland
+      - X
+  uses:
+    disabled:
+      - lcms
+      - debug
+      - lensfun
+      - test
+      - umfpack
+  packages:
+    - dev-cpp/gtkmm:3.0
+
+- tree: packages/atoms/gnome-extra
+  # TODO: issue in the ebuild
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: dev-cpp-3.0
+          name: gtkmm
+  uses:
+    disabled:
+      - libressl
+      - static-libs
+      - debug
+      - test
+      - zeitgeist
+      - packagekit
+      - doc
+  packages:
     - app-misc/gnote
 
-- tree: packages/atoms-extra/gnome
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - libressl
+      - static-libs
+      - debug
+      - test
+      - ldap
+  packages:
+    - gnome-base/gconf:2
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - libressl
+      - static-libs
+      - debug
+      - test
+      - zeitgeist
+      - debugger
+      - enchant
+  packages:
+    - app-editors/geany-plugins
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - sasl
+      - static-libs
+      - debug
+      - test
+      - gnutls
+      - libressl
+  packages:
+    - app-admin/gkrellm:2
+
+- tree: packages/atoms/gnome-extra
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race16
+  uses:
+    disabled:
+      - sasl
+      - static-libs
+      - debug
+      - test
+      - gnutls
+      - libressl
+  packages:
+    - x11-themes/gkrellm-themes
+    - app-text/discount
+
+- tree: packages/atoms/gnome-extra
   uses:
     enabled:
-      - gnome
-      - gtk
+      - python_single_target_python3_9
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - >-
+        source /etc/profile &&
+        macaronictl env-update &&
+        whip hook gtk.mime_update_db gtk.glib_update_schemas gtk.gtk_update_icons
+    uninstall:
+      - >-
+        source /etc/profile &&
+        macaronictl env-update &&
+        whip hook gtk.mime_update_db gtk.glib_update_schemas gtk.gtk_update_icons
+
   packages:
-    - net-vpn/networkmanager-vpnc
-    - net-vpn/networkmanager-openconnect
+    - app-office/hamster-time-tracker
+
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - lcms
+      - debug
+      - lensfun
+      - test
+      - umfpack
+      - gtk-doc
+  packages:
+    - gnome-extra/gnome-calendar
+    - gnome-extra/gnome-clocks
+    - gnome-extra/gnome-documents
+    - gnome-extra/gnome-recipes
+    - gnome-extra/gnome-todo
+    - gnome-extra/mousetweaks
+    - gnome-extra/polkit-gnome
+    - gui-libs/gtk-layer-shell
+    - media-gfx/gnome-photos
+
+
+- tree: packages/atoms/gnome-extra
+  mutations:
+    uses:
+      - wayland
+  uses:
+    disabled:
+      - lcms
+      - debug
+      - lensfun
+      - test
+      - umfpack
+      - gtk-doc
+  packages:
+    - gnome-extra/sushi
+
+- tree: packages/atoms/gnome-extra
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race16
+  packages:
+    - app-office/unoconv
+    - gnome-extra/gnome-shell-frippery
+    - gnome-extra/gnome-shell-extension-applications-overview-tooltip
+    - gnome-extra/gnome-shell-extensions-topicons
+    - gnome-extra/gnome-shell-extensions-topicons-plus
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      # disable glade that inject libglade:2.0 that require py2.7
+      - glade
+      - test
+  packages:
+    - gnome-base/libgnomecanvas
+
+- tree: packages/atoms/gnome-extra
+  uses:
+    disabled:
+      - animation-rtl
+  packages:
+    - x11-themes/gtk-engines-adwaita
+    - x11-themes/gtk-engines-murrine
+
+- tree: packages/atoms/gnome-extra
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race16
+  packages:
+    - x11-themes/murrine-themes
+
+include_layers:
+- layers/macaroni-funtoo-race16.yaml
 
 # Define the list of the files generated by Funtoo reposcan tool.
 reposcan_sources:
-#  - source1.json
-  - ./kit_cache/browser-kit-1.4-release
-  - ./kit_cache/core-gl-kit-2.0-release
-  - ./kit_cache/core-hw-kit-1.4-release
-  - ./kit_cache/core-kit-1.4-release
-  - ./kit_cache/core-server-kit-1.4-release
-  - ./kit_cache/desktop-kit-1.4-release
-  - ./kit_cache/dev-kit-1.4-release
-  - ./kit_cache/editors-kit-1.4-release
-  - ./kit_cache/games-kit-1.4-release
-  - ./kit_cache/gnome-kit-3.36-prime
-  - ./kit_cache/haskell-kit-1.4-release
-  - ./kit_cache/java-kit-1.4-release
-  - ./kit_cache/kde-kit-5.22-release
-  - ./kit_cache/lang-kit-1.4-release
-  - ./kit_cache/lisp-scheme-kit-1.4-release
-  - ./kit_cache/llvm-kit-1.4-release
-  - ./kit_cache/mate-kit-1.24-prime
-  - ./kit_cache/media-kit-1.4-release
-  - ./kit_cache/ml-lang-kit-1.4-release
-  - ./kit_cache/net-kit-1.4-release
-  - ./kit_cache/nokit-1.4-release
-  - ./kit_cache/perl-kit-5.32-release
-  - ./kit_cache/python-kit-3.7-release
-  - ./kit_cache/python-modules-kit-1.4-release
-  - ./kit_cache/qt-kit-5.15.2-release
-  - ./kit_cache/ruby-kit-2.7-prime
-  - ./kit_cache/science-kit-1.4-release
-  - ./kit_cache/security-kit-1.4-release
-  - ./kit_cache/text-kit-1.4-release
-  - ./kit_cache/xfce-kit-4.16-release
+
+  - ./kit_cache/browser-kit-next
+  - ./kit_cache/core-gl-kit-next
+  - ./kit_cache/core-hw-kit-next
+  - ./kit_cache/core-kit-next
+  - ./kit_cache/core-server-kit-next
+  - ./kit_cache/desktop-kit-next
+  - ./kit_cache/dev-kit-next
+  - ./kit_cache/editors-kit-next
+  - ./kit_cache/games-kit-next
   - ./kit_cache/geaaru-kit-funtoo
+  - ./kit_cache/gnome-kit-next-3.36-prime
+  - ./kit_cache/haskell-kit-next
+  - ./kit_cache/java-kit-next
+  - ./kit_cache/kde-kit-next-5.25-release
+  - ./kit_cache/lang-kit-next
+  - ./kit_cache/lisp-scheme-kit-next
+  - ./kit_cache/llvm-kit-next
+  - ./kit_cache/mate-kit-next-1.24-prime
+  - ./kit_cache/media-kit-next
+  - ./kit_cache/ml-lang-kit-next
+  - ./kit_cache/net-kit-next
+  - ./kit_cache/perl-kit-next
+  - ./kit_cache/python-kit-next
+  - ./kit_cache/python-modules-kit-next
+  - ./kit_cache/qt-kit-next-5.15.2-release
+  - ./kit_cache/ruby-kit-next
+  - ./kit_cache/science-kit-next
+  - ./kit_cache/security-kit-next
+  - ./kit_cache/text-kit-next
+  - ./kit_cache/xfce-kit-next-4.16-release
+
 
 # Disable use of category with slot as requires. Default is without slot.
 reposcan_requires_slot: true
 
 reposcan_contraints:
   packages:
-    - dev-lang/python:3.7
-    - dev-lang/ruby:2.6
-    - dev-lang/ruby:2.7
-    - sys-devel/gcc:9.2.0
-    - sys-devel/llvm:11
-    - sys-devel/clang:11
-    - dev-cpp/gtkmm:3.0
+    - dev-lang/python:3.9
+    - sys-devel/gcc:11.3.0
+    - sys-devel/llvm:13
+    - dev-lang/vala:0.54
 
-    # until the tree is fixed
-    - virtual/jdk:1.8
-    - virtual/jdk:11
-    - virtual/jre:1.8
-    - virtual/jre:11
+    - sys-libs/compiler-rt:13.0.0
+    - sys-devel/clang:13
+    - sys-devel/clang-runtime:13.0.0
 
     # Using nodejs-14 LTS for now
     - <net-libs/nodejs-15.0
 
+    - dev-lang/ruby:3.1
+
 reposcan_disabled_use_flags:
-  # !!internal use only!! used for creating build images and the first half of bootstrapping [make stage1]
   - build
 
   - emacs
@@ -183,29 +396,34 @@ reposcan_disabled_use_flags:
   - elibc_musl
   - elibc_mingw
   - elibc_uclibc
-  - elogind
+  - elibc_mintlib
   - libressl
   - gtk-doc
   - gles2-only
   - python_single_target_python2_7
   - python_single_target_python3_6
-  - python_single_target_python3_9
+  - python_single_target_python3_7
   - python_single_target_python3_8
   - python_single_target_python3_10
   # I disable pypy support atm
   - python_single_target_pypy3
   - python_targets_python2_7
   - python_targets_python3_6
-  - python_targets_python3_9
+  - python_targets_python3_7
   - python_targets_python3_8
   - python_targets_python3_10
   - python_targets_pypy3
   - ruby_targets_ruby25
   - ruby_targets_ruby24
+  - ruby_targets_ruby26
+  - ruby_targets_ruby27
+  - ruby_targets_ruby32
+  - ruby_targets_ruby30
   - ppc-aix
   - x86-winnt
   - kernel-builtin
   - kernel_Winnt
+  - kernel_FreeBSD
   - man
   - minimal
   # Cryptographic library for embedded systems
@@ -213,6 +431,8 @@ reposcan_disabled_use_flags:
   - modules
 
   - debug
+
+  - systemd
 
   # Disable efl/e17
   - ecore
@@ -231,6 +451,9 @@ reposcan_disabled_use_flags:
 
   # Disable gnome-keyring for upper cycles
   - gnome-keyring
+
+  # Ignore packagekit feature
+  - packagekit
 
   - vim-syntax
   - test
@@ -283,8 +506,7 @@ reposcan_disabled_use_flags:
   - ppc
   - ppc64
 
+  - userland_BSD
 reposcan_disabled_keywords:
   #- ~amd64
   - -*
-  - next
-
