--- a/packages/atoms/emulation/app-emulation/docker-slim/build.yaml
+++ b/packages/atoms/emulation/app-emulation/docker-slim/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp docker-slim-1.40.3.ebuild /var/git/meta-repo/kits/core-kit/app-emulation/docker-slim/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
