kernel-5.10/virtualbox-guest-additions: Bump v.7.0.10.158379

--- a/packages/kernels/5.10/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/5.10/virtualbox-guest-additions/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-guest-additions
-version: 7.0.8.156879+4
+version: 7.0.10.158379
 category: kernel-5.10
 provides:
 - name: virtualbox-guest-additions
@@ -16,4 +16,4 @@ annotations:
 labels:
   emerge.packages: app-emulation/virtualbox-guest-additions
   kernel.suffix: macaroni
-  kernel.version: 5.10.185
+  kernel.version: 5.10.192
