--- a/packages/kernels/5.10/virtualbox-modules/definition.yaml
+++ b/packages/kernels/5.10/virtualbox-modules/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-modules
-version: 7.0.8.156879+4
+version: 7.0.10.158379
 category: kernel-5.10
 requires:
 - name: virtualbox-common
@@ -14,4 +14,4 @@ annotations:
 labels:
   emerge.packages: app-emulation/virtualbox-modules
   kernel.suffix: macaroni
-  kernel.version: 5.10.185
+  kernel.version: 5.10.192
