--- a/packages/atoms/emulation/app-emulation/lxd/build.yaml
+++ b/packages/atoms/emulation/app-emulation/lxd/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp lxd-5.18-r1.ebuild /var/git/extra-kits/geaaru-kit/app-emulation/lxd/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
