media-libs/rlottie: Bump v.0.2+1

--- a/packages/atoms/base-multimedia4/media-libs/rlottie/build.yaml
+++ b/packages/atoms/base-multimedia4/media-libs/rlottie/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp rlottie-0.2.ebuild /var/git/meta-repo/kits/media-kit/media-libs/rlottie/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
