--- a/packages/kernels/5.10/rtw89/build.yaml
+++ b/packages/kernels/5.10/rtw89/build.yaml
@@ -10,7 +10,7 @@ prelude:
 # macaroni-lts-full installs modules.order and modules.builtin
 - >-
   luet i kernel-5.10/macaroni-lts-full kernel-5.10/macaroni-lts-modules --nodeps --finalizer-env "BUILD_ISO=1" &&
-  luet i git make &&
+  luet i git make sys-apps/kmod &&
   luet cleanup
 - >-
   ln -s
