toolchain/emulation: Update rdeps

--- a/packages/toolchain/emulation/definition.yaml
+++ b/packages/toolchain/emulation/definition.yaml
@@ -15,6 +15,18 @@ requires:
   - name: docker-proxy
     category: app-emulation
     version: '>=0'
+  - name: docker-slim
+    category: app-emulation
+    version: '>=0'
+  - name: firecracker-bin
+    category: app-emulation
+    version: '>=0'
+  - name: lxc
+    category: app-emulation
+    version: '>=0'
+  - name: lxd
+    category: app-emulation
+    version: '>=0'
   - name: qemu
     category: app-emulation
     version: '>=0'
@@ -33,6 +45,9 @@ requires:
   - name: go-md2man
     category: dev-go
     version: '>=0'
+  - name: xdelta
+    category: dev-util-3
+    version: '>=0'
   - name: virglrenderer
     category: media-libs
     version: '>=0'
@@ -44,6 +59,18 @@ requires:
     version: '>=0'
   - name: glusterfs
     category: sys-cluster
+    version: '>=0'
+  - name: singularity
+    category: sys-cluster
+    version: '>=0'
+  - name: bin86
+    category: sys-devel
+    version: '>=0'
+  - name: dev86
+    category: sys-devel
+    version: '>=0'
+  - name: lxcfs
+    category: sys-fs
     version: '>=0'
   - name: libapparmor
     category: sys-libs
