toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -81,10 +81,16 @@ requires:
   - name: byacc
     category: dev-util
     version: '>=0'
+  - name: ccache
+    category: dev-util
+    version: '>=0'
   - name: debootstrap
     category: dev-util
     version: '>=0'
   - name: kbuild
+    category: dev-util
+    version: '>=0'
+  - name: shadowman
     category: dev-util
     version: '>=0'
   - name: strace
@@ -118,6 +124,9 @@ requires:
     category: net-fs
     version: '>=0'
   - name: libgsasl
+    category: net-libs
+    version: '>=0'
+  - name: libgssglue
     category: net-libs
     version: '>=0'
   - name: libhubbub
@@ -191,6 +200,9 @@ requires:
     version: '>=0'
   - name: os-prober
     category: sys-boot
+    version: '>=0'
+  - name: distcc
+    category: sys-devel
     version: '>=0'
   - name: multipath-tools
     category: sys-fs
