sys-devel/distcc: Bump v.3.4+1

--- a/packages/atoms/tools/sys-devel/distcc/definition.yaml
+++ b/packages/atoms/tools/sys-devel/distcc/definition.yaml
@@ -1,15 +1,15 @@
 name: distcc
-version: "3.4"
+version: 3.4+1
 category: sys-devel
 use_flags:
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
 - -selinux
+- -xinetd
 - gssapi
 - gtk
 - python_single_target_python3_9
-- xinetd
 - zeroconf
 requires:
 - name: python
