--- a/packages/atoms/xfce/xfce-extra/xfce4-sensors-plugin/definition.yaml
+++ b/packages/atoms/xfce/xfce-extra/xfce4-sensors-plugin/definition.yaml
@@ -1,11 +1,11 @@
 name: xfce4-sensors-plugin
-version: 1.4.3
+version: 1.4.3+1
 category: xfce-extra
 use_flags:
+- -video_cards_nvidia
 - hddtemp
 - libnotify
 - lm_sensors
-- video_cards_nvidia
 requires:
 - name: hddtemp
   version: '>=0'
@@ -13,12 +13,15 @@ requires:
 - name: lm_sensors
   version: '>=0'
   category: sys-apps
-- name: nvidia-drivers
+- name: gtk+
   version: '>=0'
-  category: x11-drivers
+  category: x11-libs-3
 - name: libnotify
   version: '>=0'
   category: x11-libs
+- name: libxfce4ui
+  version: '>=0'
+  category: xfce-base
 - name: xfce4-panel
   version: '>=0'
   category: xfce-base
