atoms/emulation: Review build order

--- a/packages/atoms/emulation/sys-cluster/glusterfs/build.yaml
+++ b/packages/atoms/emulation/sys-cluster/glusterfs/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libslirp
+- name: spice
   version: '>=0'
-  category: net-libs
+  category: app-emulation
