--- a/packages/atoms/emulation/media-libs/virglrenderer/build.yaml
+++ b/packages/atoms/emulation/media-libs/virglrenderer/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: spice-protocol
+- name: libcacard
   version: '>=0'
   category: app-emulation
