app-emulation/spice: Bump v.0.15.2+1

--- a/packages/atoms/emulation/app-emulation/spice/build.yaml
+++ b/packages/atoms/emulation/app-emulation/spice/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: glusterfs
+- name: spice-protocol
   version: '>=0'
-  category: sys-cluster
+  category: app-emulation
