app-emulation/qemu: Bump v.7.1.0+2

--- a/packages/atoms/emulation/app-emulation/qemu/definition.yaml
+++ b/packages/atoms/emulation/app-emulation/qemu/definition.yaml
@@ -1,5 +1,5 @@
 name: qemu
-version: 7.1.0+1
+version: 7.1.0+2
 category: app-emulation
 use_flags:
 - -accessibility
@@ -19,7 +19,6 @@ use_flags:
 - -sasl
 - -sdl-image
 - -selinux
-- -smartcard
 - -snappy
 - -static
 - -systemtap
@@ -58,6 +57,7 @@ use_flags:
 - sdl
 - seccomp
 - slirp
+- smartcard
 - spice
 - ssh
 - static-user
