--- a/packages/atoms/emulation/app-emulation/qemu/build.yaml
+++ b/packages/atoms/emulation/app-emulation/qemu/build.yaml
@@ -30,6 +30,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: spice
+- name: glusterfs
   version: '>=0'
-  category: app-emulation
+  category: sys-cluster
