--- a/packages/atoms/emulation/app-emulation/spice-protocol/build.yaml
+++ b/packages/atoms/emulation/app-emulation/spice-protocol/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race16
+- name: libslirp
   version: '>=0'
-  category: seed
+  category: net-libs
