--- a/packages/atoms/base-gnome3/gnome-base/gdm/definition.yaml
+++ b/packages/atoms/base-gnome3/gnome-base/gdm/definition.yaml
@@ -24,6 +24,9 @@ requires:
 - name: gnome-shell
   version: '>=0'
   category: gnome-base
+- name: fontconfig
+  version: '>=0'
+  category: media-libs-1.0
 - name: keyutils
   version: '>=0'
   category: sys-apps
