--- a/portage-converter/base-gnome3.yaml
+++ b/portage-converter/base-gnome3.yaml
@@ -174,6 +174,15 @@ artefacts:
       - doc
   packages:
     - gnome-base/gdm
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - >-
+        entities merge --specs-dir /usr/share/macaroni/entities/
+        -e gdm || true
+      - eval 'mkdir /var/lib/gdm -p || true' && eval 'chown gdm:gdm /var/lib/gdm || true'
 
 - tree: packages/atoms/base-gnome3
   mutations:
