--- a/portage-converter/base-tools.yml
+++ b/portage-converter/base-tools.yml
@@ -531,6 +531,14 @@ artefacts:
     - elibc_glibc
   packages:
   - net-misc/openssh
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - >-
+        eval 'mkdir /var/empty -p || true' && entities merge --specs-dir /usr/share/macaroni/entities/
+        -e sshd
 
 - tree: packages/atoms/base-tools
   uses:
